--- a/src/components/mission/MissionHome.css
+++ b/src/components/mission/MissionHome.css
@@ -8,13 +8,13 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background: #24232377;
+  background: #4b919456;
   }
   
   .mission-home:before {
     content: '';
     position: absolute;
-    background: url('../../assets/mission-home-min.jpg') no-repeat center bottom/cover;
+    background: url('../../assets/mission-home-min.webp') no-repeat center bottom/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
@@ -22,8 +22,8 @@
   }
 
   .mission-home .mission-home-content  {
-    top: 10%;
-    left: 5%;
+    bottom: 10%;
+    right: 2%;
     height: max-content;
     position: absolute;
     text-align: left;
