--- a/src/components/tms-therapy/TMS-Therapy.css
+++ b/src/components/tms-therapy/TMS-Therapy.css
@@ -4,7 +4,7 @@
 .tms-therapy {
     width: 100%;
     height: 100vh;
-    background: rgba(19, 18, 18, 0.479);
+    background: #4b919456;
     position: relative;
   }
   
@@ -33,7 +33,7 @@
 
 .tms-therapy .tms-therapy-content h1 {
     color: white;
-    font-size: 4rem;
+    font-size: 3rem;
     font-family: 'Montserrat', sans-serif;
     text-align: left;
 }
