--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -8,13 +8,13 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    background: rgba(22, 22, 22, 0.521);
+    background: #4b919456;
   }
   
   .contact-hero:before {
     content: '';
     position: absolute;
-    background: url('../../assets/menu-bg-contact-min.webp') no-repeat center center/cover;
+    background: url('../../assets/menu-bg-insurance-min.webp') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
@@ -23,7 +23,7 @@
 .contact-hero .contact-hero-content {
     display: block;
     position: absolute;
-    top: 30%;
+    bottom: 20%;
     left: 10%;
     padding: 1rem;
     width: 50%;
