--- a/src/components/faq/Faq.css
+++ b/src/components/faq/Faq.css
@@ -4,7 +4,7 @@
 .FAQ {
     width: 100%;
     height: 100vh;
-    background: #0202027a;
+    background: #4b919456;
     position: relative;
   }
   
@@ -27,12 +27,13 @@
 .FAQ .FAQ-content {
     display: block;
     position: absolute;
-    top: 50%;
+    top: 40%;
+    left: 5%;
     padding: 1rem;
 }
 
 .FAQ h1 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-family: 'Montserrat', sans-serif;
     color: white;
 }
