--- a/src/components/footer/FooterStyles.css
+++ b/src/components/footer/FooterStyles.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 50vh;
     position: relative;
-    background: black;
+    background: #4b9194;
 }
 
 .footer:before {
@@ -64,7 +64,7 @@
     margin: 1rem 0;
     text-transform: uppercase;
     text-align: center;
-    color: var(--primary-color);
+    color: black;
     font-size: 1rem;
 }
 
