--- a/src/components/hero/Hero.css
+++ b/src/components/hero/Hero.css
@@ -1,209 +1,126 @@
-@import url('https://fonts.googleapis.com/css2?family=Courgette&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
 
-.hero {
-    height: 98vh;
-    width: 100%;
-    background-color: rgba(0, 0, 0, 0.349);
-    z-index: 5555;
+/* img tags */
+
+.imagesContainer {
+	width: 100%;
+	height: 100vh;
+	position: relative;
+	overflow: hidden;
+	box-shadow: rgba(0, 0, 0, 0.356) 10px 10px 10px;
 }
 
-video {
-    position: relative;
-    object-fit: cover;
+
+.hero-caption {
+  position: absolute;
+  z-index: 5;
+  bottom: 20%;
+  left: 5%;
+  padding: 1rem;
+  width: 50%;
+}
+
+.hero-caption span {
+  color: #d3d01e;
+}
+
+.hero-caption h1 {
+  color: rgb(255, 255, 255);
+  font-size: 4rem;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  line-height: 3.7rem;
+}
+
+.hero-caption p {
+  color: white;
+  font-size: 1rem;
+  padding: 1rem 0;
+}
+
+.hero-caption h2 {
+  color: white;
+  font-size: 1.3rem;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  padding: .3rem 0 0 0;
+  font-weight: normal;
+}
+
+.imagesContainer img {
+	width: 100%;
+  height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* images using CSS */
+.imageDiv {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-size: cover;
+}
+
+.image1 { background: linear-gradient(to top, #4b919456, #29363656), url('../../assets/hero_1.webp')no-repeat center center/cover; }
+
+.image2 { background: linear-gradient(to top, #4b919456, #29363656), url('../../assets/hero_2.webp')no-repeat center center/cover; }
+
+
+/* animation styles */
+@keyframes fadeIn {
+	0% { opacity: 0; }
+	20% { opacity: 0; }
+	60% { opacity: 1; }
+	100% { opacity: 1; }
+}
+
+.fadeInClass {
+	animation-name: fadeIn;
+	animation-duration: 7s;
+	animation-iteration-count: infinite;
+	animation-direction: alternate;
+	animation-timing-function: linear;
+}
+
+
+.hero-btn button {
+  background-color: white;
+  color: black;
+  border: none;
+  border-radius: 5px;
+  padding: .8rem 2.5rem;
+  font-size: 1rem;
+}
+
+
+@media screen and (max-width: 940px) {
+  .hero-caption {
     width: 100%;
-    height: 100%;
-    z-index: -1;
+    bottom: 10%;
+    left: 0%;
+    text-align: center;
   }
 
-.hero .hero-container {
-    top: 30%;
-    left: 10%;
-    position: absolute;
-    text-align: left;
-    width: auto;
-    padding: 1rem;
+  .hero-caption h1 {
+    font-size: 3rem;
+  }
+
+  .hero-caption h2 {
+    font-size: 1rem;
+  }
 }
 
-.hero-logo {
-    text-align: center;
+@media screen and (max-width: 450px) {
+  .hero-caption h1 {
+    font-size: 2rem;
+    line-height: 2.5rem;
+  }
+
+  .hero-caption h2 {
+    font-size: 1rem;
+  }
 }
-
-.hero h1 {
-    font-size: 7rem;
-    text-align: left;
-    color: rgba(255, 255, 255, 0.89);
-    font-family: 'Courgette', cursive;    
-    line-height: 7rem;
-}
-
-.hero span {
-    color: rgb(24, 157, 201);
-}
-
-.hero h2 {
-    font-size: 1.5rem;
-    color: rgb(229, 231, 229);
-    padding: .5rem 0;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 100;
-}
-
-.hero-container p {
-    font-size: 18px;
-    color: white;
-}
-
-.hero-btns {
-    display: flex;
-    gap: 1rem;
-}
-
-.hero .hero-btn button {
-    background-color: rgb(43, 160, 206);
-    border: 1px solid rgb(43, 160, 206);
-    cursor: pointer;
-    color: white;
-}
-
-.hero .hero-btn button:hover {
-    background-color: var(--secondary-text);
-    border: 1px solid var(--secondary-text);
-}
-
-
-.hero .hero-btn2 button {
-    background-color: rgba(43, 160, 206, 0);
-    border: 1px solid rgb(43, 160, 206);
-    cursor: pointer;
-    color: white;
-}
-
-.hero .hero-btn2 button:hover {
-    background-color: rgb(255, 255, 255);
-    border: 1px solid rgb(255, 255, 255);
-    cursor: pointer;
-    color: rgb(43, 160, 206);
-}
-
-
-
-/* make keyframes that tell the start state and the end state of our object */
-
-@-webkit-keyframes fadeIn { 
-    0%   { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    @-moz-keyframes fadeIn { 
-    0%   { opacity: 0; }
-      100% { opacity: 1; }
-    }
-    @keyframes fadeIn { 
-     0%   { opacity: 0; }
-      100% { opacity: 1; } 
-    }
-    
-    .fade-in {
-        opacity:0;  
-        /* make things invisible upon start */
-        
-        -webkit-animation:fadeIn ease-in 1;  
-        -moz-animation:fadeIn ease-in 1;
-        animation:fadeIn ease-in 1;
-    
-        -webkit-animation-fill-mode:forwards;  
-        -moz-animation-fill-mode:forwards;
-        animation-fill-mode:forwards;
-    
-        -webkit-animation-duration:1s;
-        -moz-animation-duration:1s;
-        animation-duration:1s;
-    }
-    
-    .fade-in.one {
-    -webkit-animation-delay: 0.7s;
-    -moz-animation-delay: 0.7s;
-    animation-delay: 0.7s;
-    }
-    
-    .fade-in.two {
-    -webkit-animation-delay: 1.7s;
-    -moz-animation-delay:1.7s;
-    animation-delay: 1.7s; 
-    }
-    
-    .fade-in.three {
-    -webkit-animation-delay: 2.6s;
-    -moz-animation-delay: 2.6s;
-    animation-delay: 2.6s;
-    }
-
-
-    .fade-in.four {
-        -webkit-animation-delay: 3.5s;
-        -moz-animation-delay: 3.5s;
-        animation-delay: 3.5s;
-    }
-
-    .fade-in.five {
-        -webkit-animation-delay: 4.4s;
-        -moz-animation-delay: 4.4s;
-        animation-delay: 4.4s;
-    }
-
-
-
-
-
-/* MEDIA QUERIES */
-
-
-
-@media screen and (max-width:940px) {
-
-    .hero h1 {
-    font-size: 4rem;
-    text-align: center;
-    line-height: 4rem;
-    }
-
-    .hero p {
-        font-size: 15px;
-    }
-
-    .hero .hero-container {
-        top: 30%;
-        left: 0%;
-        text-align: center;
-        width: 100%;
-    }
-
-    .hero span {
-        font-size: 5rem;
-    }
-
-    .hero h2 {
-        text-align: center;
-        font-size: 1.2rem;
-        padding: 1rem;
-    }
-
-    .hero-btns {
-        justify-content: center;
-    }
-
-}
-
-
-@media screen and (max-width:940px)  {
-    .hero h1 {
-        font-size: 3rem;
-        }
-
-    .hero span {
-        font-size: 4rem;
-        }
-    
-}
-
-
