--- a/src/components/navbar/NavbarStyles.css
+++ b/src/components/navbar/NavbarStyles.css
@@ -5,13 +5,13 @@
     width: 100%;
     height: auto;
     z-index: 10;
-    background: rgba(2, 2, 2, 0.192);
+    background: #10aac51c;
     position: absolute;
     text-align: center;
     
-    -webkit-box-shadow: 0px 5px 21px -2px rgba(0, 0, 0, 0.25);
+    /* -webkit-box-shadow: 0px 5px 21px -2px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0px 5px 21px -2px rgba(0,0,0,0.25);
-    box-shadow: 0px 5px 21px -2px rgba(0,0,0,0.25);
+    box-shadow: 0px 5px 21px -2px rgba(0,0,0,0.25); */
 }
 
 .nav-box {
@@ -47,10 +47,6 @@
 }
 
 
-.show {
-  display: none;
-}
-
 .hamburger {
     display: none;
     padding: 1rem;
@@ -81,7 +77,7 @@
 
 
 .navbar li a:hover {
-  color: rgb(23, 183, 231);
+  color: #e9c709;
   font-size: 16px;
 }
 
