--- a/src/components/section2/Section2.css
+++ b/src/components/section2/Section2.css
@@ -13,7 +13,7 @@
   .section2:before {
     content: '';
     position: absolute;
-    background: url('../../assets/bg3.png') no-repeat center center/cover;
+    /* background: url('../../assets/bg3.png') no-repeat center center/cover; */
     height: 100%;
     width: 100%;
     z-index: -7;
@@ -28,7 +28,7 @@
 }
 
 .section2-content-right {
-    width: 550px;
+    width: 600px;
     text-align: center;
     margin: auto;
 }
@@ -36,6 +36,7 @@
 .section2-content-right img {
     width: 100%;
     height: auto;
+    border-radius: 1rem;
 }
 
 .section2-content-left {
