--- a/src/components/mission/MissionHome.css
+++ b/src/components/mission/MissionHome.css
@@ -3,27 +3,27 @@
 
 .mission-home {
   width: 100%;
-  height: 80vh;
+  height: 100vh;
   position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background: #4b919456;
+  background: #0000001a;
   }
   
   .mission-home:before {
     content: '';
     position: absolute;
-    background: url('../../assets/mission-home-min.webp') no-repeat center bottom/cover;
+    background: url('../../assets/mission-home-min3.webp') no-repeat center bottom/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
-    background-attachment: fixed;
+    /* background-attachment: fixed; */
   }
 
   .mission-home .mission-home-content  {
-    bottom: 10%;
-    right: 2%;
+    bottom: 30%;
+    left: 2%;
     height: max-content;
     position: absolute;
     text-align: left;
