--- a/src/components/nasal-esketamine/NasalEsketamine.css
+++ b/src/components/nasal-esketamine/NasalEsketamine.css
@@ -3,14 +3,14 @@
 .nasalEsketamine {
     width: 100%;
     height: 100vh;
-    background: rgba(21, 3, 27, 0.521);
+    background: #4b919456;
     position: relative;
   }
   
   .nasalEsketamine:before {
     content: '';
     position: absolute;
-    background: url('../../assets/esketamine-bg.webp') no-repeat center top/cover;
+    background: url('../../assets/esketamine-bg.webp') no-repeat center center/cover;
     height: 100%;
     width: 100%;
     z-index: -1;
@@ -25,7 +25,7 @@
 .nasalEsketamine .nasalEsketamine-content {
     display: block;
     position: absolute;
-    top: 50%;
+    bottom: 20%;
     padding: 1rem;
 }
 
