--- a/src/components/section2/Access.css
+++ b/src/components/section2/Access.css
@@ -15,12 +15,16 @@
 }
 
 .access-flex-item h1 {
-    font-size: 2.5rem;
+    font-size: 1.5rem;
 }
 
 .access-flex-item h2 {
     font-size: 1rem;
-    font-weight: 300;
+    font-weight: normal;
+}
+
+.access-flex-item p {
+    font-size: 12px;
 }
 
 @media (max-width: 700px) {
