--- a/src/components/section2/Section2.css
+++ b/src/components/section2/Section2.css
@@ -52,7 +52,7 @@
 }
 
 .section2-content-left h1 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     padding: 1rem 0;
     text-transform: uppercase;
 }
@@ -66,6 +66,7 @@
     background-color: var(--primary-color);
     color: white;
     font-size: 13px;
+    margin: .5rem;
 }
 
 
@@ -92,15 +93,16 @@
     .section2-content-left h1 {
         text-align: center;
     }
-}
 
-@media screen and (max-width:600px) {
     .section2-btn {
         flex-wrap: wrap;
         width: 100%;
         gap: 0;
-
     }
+
+}
+
+@media screen and (max-width:700px) {
 
     .section2-btn .section2-btn1 {
         width: 100%;
@@ -117,6 +119,10 @@
 
     .section2-btn2 button {
         width: 100%;
+    }
+
+    .section2-content-left h1 {
+        font-size: 1rem;
     }
 }
 
