--- a/src/components/brainSlider/BrainSliderSmall.css
+++ b/src/components/brainSlider/BrainSliderSmall.css
@@ -68,6 +68,19 @@
     margin: 0 auto;
     display: block;
   }
+
+  .slider-btn {
+    text-align: center;
+  }
+  
+  .slider-btn button {
+    background-color: rgba(241, 141, 11, 0.726);
+    color: rgb(238, 231, 231);
+    border: none;
+    border-radius: 5px;
+    padding: .8rem 2.5rem;
+    font-size: 1rem;
+  }
   
 
   @media screen and (max-width:700px) {
