--- a/src/components/footer/FooterStyles.css
+++ b/src/components/footer/FooterStyles.css
@@ -64,7 +64,7 @@
     margin: 1rem 0;
     text-transform: uppercase;
     text-align: center;
-    color: rgba(241, 141, 11, 0.726);
+    color: rgb(255, 255, 255);
     font-size: 1rem;
 }
 
